--- a/SHAP.ipynb
+++ b/SHAP.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNK7GCawMi2q1ltkTqae5CS",
+      "authorship_tag": "ABX9TyNsV29RbzzpdXo04aQzBJo2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -576,7 +576,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# Cell 4: SHAP for Logistic Regression\n",
         "explainer_log = shap.Explainer(logreg, X_train)\n",
         "shap_values_log = explainer_log(X_test)\n",
         "shap_log_mean = np.mean(np.abs(shap_values_log.values), axis=0).mean(axis=1)"
@@ -590,7 +589,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# Cell 5: SHAP for Random Forest\n",
         "explainer_rf = shap.TreeExplainer(rf)\n",
         "shap_values_rf = explainer_rf(X_test)\n",
         "shap_rf_mean = np.mean(np.abs(shap_values_rf.values), axis=0).mean(axis=1)"
@@ -604,7 +602,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# Cell 6: Comparison and Output\n",
         "features = iris.feature_names\n",
         "print('Feature Names:', features)\n",
         "importance_df = pd.DataFrame({\n",
@@ -648,9 +645,7 @@
         "shap.force_plot(explainer_rf.expected_value[2], shap_values_rf.values[0, :, 2],\n",
         "                X_test.iloc[0], feature_names=iris.feature_names, matplotlib=True, show=False)\n",
         "plt.title('SHAP Force Plot - Random Foresst (Sample 0, Class Virginica)')\n",
-        "plt.show()\n",
-        "# In a graphical environment, this shows arrows for each feature’s contribution.\n",
-        "# Expect a large red arrow for 'petal length' pushing toward virginica."
+        "plt.show()\n"
       ],
       "metadata": {
         "colab": {
@@ -696,9 +691,7 @@
         "shap.force_plot(explainer_log.expected_value[2], shap_values_log.values[0, :, 2],\n",
         "                X_test.iloc[0], feature_names=iris.feature_names, matplotlib=True, show=False)\n",
         "plt.title('SHAP Force Plot - Logistic Regression (Sample 0, Class Virginica)')\n",
-        "plt.show()\n",
-        "# In a graphical environment, this shows arrows for each feature’s contribution.\n",
-        "# Expect a large red arrow for 'petal length' pushing toward virginica."
+        "plt.show()\n"
       ],
       "metadata": {
         "colab": {
@@ -739,14 +732,12 @@
     {
       "cell_type": "code",
       "source": [
-        "# Cell 9: SHAP Waterfall Plot for Logistic Regression (Sample 0, Class 2 - Virginica)\n",
         "shap.waterfall_plot(shap.Explanation(values=shap_values_rf.values[0, :, 2],\n",
         "                                    base_values=explainer_rf.expected_value[2],\n",
         "                                    data=X_test.iloc[0],\n",
         "                                    feature_names=iris.feature_names), show=False)\n",
         "plt.title('SHAP Waterfall Plot - Logistic Regression (Sample 0, Class Virginica)')\n",
-        "plt.show()\n",
-        "# In a graphical environment, this shows a step-by-step breakdown, with 'petal length' likely dominating."
+        "plt.show()\n"
       ],
       "metadata": {
         "colab": {
@@ -773,14 +764,12 @@
     {
       "cell_type": "code",
       "source": [
-        "# Cell 9: SHAP Waterfall Plot for Logistic Regression (Sample 0, Class 2 - Virginica)\n",
         "shap.waterfall_plot(shap.Explanation(values=shap_values_log.values[0, :, 2],\n",
         "                                    base_values=explainer_log.expected_value[2],\n",
         "                                    data=X_test.iloc[0],\n",
         "                                    feature_names=iris.feature_names), show=False)\n",
         "plt.title('SHAP Waterfall Plot - Logistic Regression (Sample 0, Class Virginica)')\n",
-        "plt.show()\n",
-        "# In a graphical environment, this shows a step-by-step breakdown, with 'petal length' likely dominating."
+        "plt.show()\n"
       ],
       "metadata": {
         "colab": {
